--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"mongodb": "^3.6.5"
+		"mongodb": "^3.6.5",
+		"mongoose": "^5.12.2"
 	}
 }
